--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,37 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
+
+html {
+    height: 100%;
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
+    background: rgb(6,0,106);
+    background: linear-gradient(110deg, rgba(6,0,106,1) 0%, rgba(0,212,255,1) 91%);
+}
+
+input {
+    font-family: 'Open Sans', sans-serif;
+    outline: none;
+}
+
+button {
+    font-family: 'Open Sans', sans-serif;
+}
+
+/* .hide {
+    display: none
+} */
+
+.systemChoice {
+    display: flex;
+}
+
+.systemChoice div {
+    display: flex;
+    flex-direction: column;
+}
+
 .bottom {
     border-bottom: 1px solid #000000;
 }
@@ -13,4 +47,9 @@
 
 .temp {
     color: red
+}
+
+/*предпоследняя ячейка предпоследней строки*/
+tbody tr:nth-last-child(2) td:nth-last-child(2) {
+    color: red;
 }
