--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ html {
 
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100%;
@@ -123,6 +124,16 @@ p {
     padding: 10px;
 }
 
+.taskConfirm {
+    padding: 10px;
+    margin: 5px;
+}
+
+.taskBack {
+    padding: 10px;
+    margin: 5px;
+}
+
 .systemButton {
     padding: 10px;
     margin-left: 190px;
@@ -143,6 +154,14 @@ p {
     padding: 20px;
     margin: 5px;
     margin-top: 20px;
+}
+
+.tableDiv {
+    padding: 10px;
+    background: rgba(30, 3, 66, 0.164);
+    backdrop-filter: blur(10px);
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 15px;
 }
 
 .hide {
@@ -185,4 +204,3 @@ p {
 tbody tr:nth-last-child(2) td:nth-last-child(2) {
     color: red;
 }
-  
